<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/endo1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_question" />

        <RadioGroup
            android:id="@+id/first_question_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/first_question_first_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_question_first_answer" />

            <RadioButton
                android:id="@+id/first_question_second_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_question_second_answer" />

            <RadioButton
                android:id="@+id/first_question_third_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_question_third_answer" />

            <RadioButton
                android:id="@+id/first_question_fourth_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_question_fourth_answer" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/first_feedback">

            <TextView
                android:id="@+id/first_question_feedback_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/first_question_feedback_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question" />

        <CheckBox
            android:id="@+id/second_question_first_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question_first_answer" />

        <CheckBox
            android:id="@+id/second_question_second_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question_second_answer" />

        <CheckBox
            android:id="@+id/second_question_third_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question_third_answer" />

        <CheckBox
            android:id="@+id/second_question_fourth_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question_fourth_answer" />

        <CheckBox
            android:id="@+id/second_question_fifth_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question_fifth_answer" />

        <CheckBox
            android:id="@+id/second_question_sixth_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question_sixth_answer" />

        <CheckBox
            android:id="@+id/second_question_seventh_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question_seventh_answer" />

        <CheckBox
            android:id="@+id/second_question_eighth_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question_eighth_answer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/second_feedback">

            <TextView
                android:id="@+id/second_question_feedback_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <ImageView
                android:id="@+id/second_question_feedback_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_question" />

        <RadioGroup
            android:id="@+id/third_question_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/third_question_first_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_first_answer" />

            <RadioButton
                android:id="@+id/third_question_second_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_second_answer" />

            <RadioButton
                android:id="@+id/third_question_third_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_third_answer" />

            <RadioButton
                android:id="@+id/third_question_fourth_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_fourth_answer" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/third_feedback">

            <TextView
                android:id="@+id/third_question_feedback_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/third_question_feedback_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_question" />

        <RadioGroup
            android:id="@+id/fourth_question_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/fourth_question_first_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_question_first_answer" />

            <RadioButton
                android:id="@+id/fourth_question_second_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_question_second_answer" />

            <RadioButton
                android:id="@+id/fourth_question_third_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_question_third_answer" />

            <RadioButton
                android:id="@+id/fourth_question_fourth_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_question_fourth_answer" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/fourth_feedback">

            <TextView
                android:id="@+id/fourth_question_feedback_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/fourth_question_feedback_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifth_question" />

        <RadioGroup
            android:id="@+id/fifth_question_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/fifth_question_first_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question_first_answer" />

            <RadioButton
                android:id="@+id/fifth_question_second_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question_second_answer" />

            <RadioButton
                android:id="@+id/fifth_question_third_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question_third_answer" />

            <RadioButton
                android:id="@+id/fifth_question_fourth_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question_fourth_answer" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/fifth_feedback">

            <TextView
                android:id="@+id/fifth_question_feedback_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/fifth_question_feedback_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixth_question" />

        <RadioGroup
            android:id="@+id/sixth_question_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/sixth_question_first_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_question_first_answer" />

            <RadioButton
                android:id="@+id/sixth_question_second_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_question_second_answer" />

            <RadioButton
                android:id="@+id/sixth_question_third_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_question_third_answer" />

            <RadioButton
                android:id="@+id/sixth_question_fourth_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_question_fourth_answer" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/sixth_feedback">

            <TextView
                android:id="@+id/sixth_question_feedback_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/sixth_question_feedback_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor" />

        <EditText
            android:id="@+id/seventh_question_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/seventh_question_hint"
            android:inputType="number"
            android:maxLength="8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/seventh_feedback">

            <TextView
                android:id="@+id/seventh_question_feedback_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/seventh_question_feedback_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/textColor"
            android:gravity="center"
            android:onClick="results"
            android:text="@string/results_button"
            android:textColor="#000000" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/textColor"
            android:gravity="center"
            android:onClick="reset"
            android:text="@string/reset_button"
            android:textColor="#000000" />

        <Button
            android:id="@+id/feedback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/textColor"
            android:gravity="center"
            android:onClick="feedback"
            android:text="@string/feedback_button"
            android:textColor="#000000"
            android:visibility="gone" />


    </LinearLayout>

</ScrollView>